עריכת הזנה בתשלומים ובכללי עובד + תצוגת כותרת תת קט' בעמוד מבט על

--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -872,7 +872,7 @@
         {
             selectedNumber = 1;
         }
-        if (initialAmountOfSplits >= 1)
+        if (initialAmountOfSplits > 1)
         {
             //double formerTransValue = transToEdit.transValue * initialAmountOfSplits;
             transToEdit.transValue = sumPreSplit / selectedNumber;
